[project]
name = "pwproxy"
version = "1.1.1"
description = ""
authors = [
    { name = "gaochuang", email = "895091550@qq.com" },
]
dependencies = [
    "playwright>=1.33.0",
    "pandas>=2.0.1",
    "click>=8.1.3",
]
requires-python = ">=3.10"
license = { text = "MIT" }


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
package-dir = "src"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.1",
]

[project.scripts]
pwp = "pwproxy.cli:main"
